--- a/yatube/templates/group.html
+++ b/yatube/templates/group.html
@@ -1,23 +1,16 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Записи сообщества {{ group.title }} | Yatube</title>
-  </head>
-  
-  <body>
+{% extends "base.html" %}
+{% block title %}Записи сообщества {{ group.title}} {% endblock %}
+{% block header %}Записи сообщества {{ group.title}} {% endblock %}
+{% block content %}
+    
     <h1>{{ group.title }}</h1>
-    <p>
-        {{ group.description}}
-    </p>
+    <p>{{ group.description }}</p>
     {% for post in posts %}
-    <h3>
-        Автор: {{ post.author.get_full_name }}, Дата публикации: {{ post.pub_date|date:"d M Y" }}
-    </h3>
-    <p>{{ post.text|linebreaksbr }}</p>
-    {% if not forloop.last %}<hr>{% endif %}
+        <h3>Автор: {{ post.author.get_full_name }}, 
+            Дата публикации: {{ post.pub_date|date:"d M Y" }}
+        </h3>
+        <p>{{ post.text|linebreaksbr }}</p>
+        <hr>
     {% endfor %}
-
-  </body>
-</html>
+    
+{% endblock %}
