--- a/yatube/templates/group.html
+++ b/yatube/templates/group.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Записи сообщества {{ group.title}}{% endblock %}
+{% block header %}{{ group.title }}{% endblock %}
 {% block content %}
     
-    <h1>{{ group.title }}</h1>
     <p>{{ group.description }}</p>
     {% for post in posts %}
         <h3>Автор: {{ post.author.get_full_name }}, 
