--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -7,7 +7,7 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
-        <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
     </head>
     <body>
         {% include 'nav.html' %}
