--- a/yatube/templates/index.html
+++ b/yatube/templates/index.html
@@ -3,7 +3,7 @@
 {% block header %}Последние обновления на сайте{% endblock %}
 {% block content %}
 
-    {% for post in posts %}
+    {% for post in page_obj %}
     <h3>
         Автор: {{ post.author.get_full_name }},
         Дата публикации: {{ post.pub_date|date:"d M Y" }}
@@ -11,5 +11,7 @@
     <p>{{ post.text|linebreaksbr }}</p>
     {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
+
+  {% include 'posts/includes/paginator.html' %}
 
 {% endblock %}
